--- a/config/nvim/dein/lazy.toml
+++ b/config/nvim/dein/lazy.toml
@@ -5,7 +5,6 @@ on_ft = 'toml'
 [[plugins]]
 repo = 'Xuyuanp/nerdtree-git-plugin' 
 
-
 [[plugins]]
 repo = 'scrooloose/nerdtree'
 hook_add = '''
@@ -16,6 +15,11 @@ hook_add = '''
   nnoremap <silent> <Leader>e :<C-u>NERDTreeToggle<CR>
 '''
 
-[[plugins]]
-repo = 'ryanoasis/vim-devicons'
 
+[[plugins]]
+repo = 'Shougo/deol.nvim'
+hook_add = '''
+nnoremap  <Leader>t  :Deol -split=floating<CR>
+nnoremap  <Leader>tv :Deol -split=vertical<CR>
+nnoremap  <Leader>ts :Deol -split=horizontal<CR>
+'''
