--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,8 +5,10 @@ services:
         image: nvim
         volumes:
             - ${PWD}:/share/nvim/
+            - /tmp/.X11-unix:/tmp/.X11-unix
         working_dir: /share/nvim/
         environment:
             USER_ID: ${UID:-0}
             GROUP_ID: ${GID:-0}
+            DISPLAY: ${DISPLAY}
         tty: true
