--- a/config/nvim/dein/lazy.toml
+++ b/config/nvim/dein/lazy.toml
@@ -21,5 +21,5 @@ repo = 'Shougo/deol.nvim'
 hook_add = '''
 nnoremap  <Leader>t  :Deol -split=floating<CR>
 nnoremap  <Leader>tv :Deol -split=vertical<CR>
-nnoremap  <Leader>ts :Deol -split=horizontal<CR>
+nnoremap  <Leader>th :Deol -split=horizontal<CR>
 '''
