--- a/config/nvim/dein/plugins.toml
+++ b/config/nvim/dein/plugins.toml
@@ -21,7 +21,7 @@ let g:lightline = {
     \ 'colorscheme': 'wombat',
     \ 'mode_map': {'c': 'NORMAL'},
     \ 'active': {
-    \   'left': [ [ 'mode', 'paste' ], [ 'fugitive', 'filename' ] ]
+    \   'left': [ [ 'mode', 'paste' ], [ 'cocstatus', 'currentfunction', 'fugitive', 'filename' ] ]
     \ },
     \ 'readonly': '%{&readonly?"\ue0a2":""}',
     \ 'separator': { 'left': "\ue0b0", 'right': "\ue0b2" },
@@ -30,6 +30,8 @@ let g:lightline = {
     \   'modified': 'MyModified',
     \   'readonly': 'MyReadonly',
     \   'fugitive': 'MyFugitive',
+    \   'cocstatus': 'coc#status',
+    \   'currentfunction': 'MyCurrentFunction',
     \   'filename': 'MyFilename',
     \   'fileformat': 'MyFileformat',
     \   'filetype': 'MyFiletype',
@@ -81,6 +83,9 @@ function! MyMode()
   return winwidth(0) > 60 ? lightline#mode() : ''
 endfunction
 
+function! MyCurrentFunction()
+  return get(b:, 'coc_current_function', '')
+endfunction
 
 "ステータスバーのカスタマイズ
 set laststatus=2
@@ -93,6 +98,19 @@ rev = 'release'
 hook_add = '''
 " settings for golang
 autocmd BufWritePre *.go :call CocAction('runCommand', 'editor.action.organizeImport')
+nmap <silent> gd <Plug>(coc-definition)
+nmap <silent> gy <Plug>(coc-type-definition)
+nmap <silent> gi <Plug>(coc-implementation)
+nmap <silent> gr <Plug>(coc-references)
+nnoremap <silent> K :call <SID>show_documentation()<CR>
+
+function! s:show_documentation()
+  if (index(['vim','help'], &filetype) >= 0)
+    execute 'h '.expand('<cword>')
+  else
+    call CocAction('doHover')
+  endif
+endfunction
 '''
 
 [[plugins]]
@@ -106,7 +124,9 @@ let g:fzf_preview_window = 'right:60%'
 " [[B]Commits] Customize the options used by 'git log':
 let g:fzf_commits_log_options = '--graph --color=always --format="%C(auto)%h%d %s %C(black)%C(bold)%cr"'
 " Key Map
-nnoremap <Leader>ff :GFiles<CR>
-nnoremap <Leader>fb :Buffers<CR>
-nnoremap <Leader>fg :Rg
+nnoremap <Leader>fgf :GFiles<CR>
+nnoremap <Leader>fgs :GFiles?<CR>
+nnoremap <Leader>ff  :Files<CR>
+nnoremap <Leader>fb  :Buffers<CR>
+nnoremap <Leader>fg  :Rg <C-R>=expand("<cword>")<CR>
 '''
